--- a/macOS/SDK/TRTC/TXLiteAVSDK_TRTC_Mac.framework/Versions/A/Resources/Info.plist
+++ b/macOS/SDK/TRTC/TXLiteAVSDK_TRTC_Mac.framework/Versions/A/Resources/Info.plist
@@ -7,13 +7,13 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
-	<string>TXLiteAVSDK_Mac</string>
+	<string>TXLiteAVSDK_TRTC_Mac</string>
 	<key>CFBundleIdentifier</key>
 	<string>tx.TXLiteAVSDK-TRTC-Mac</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>TXLiteAVSDK_Mac</string>
+	<string>TXLiteAVSDK_TRTC_Mac</string>
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
 	<key>CFBundleShortVersionString</key>
