--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,7 @@ Web/Demo/.idea
 /.idea
 macOS/Demo/TICDemo_Mac/TICDemo_Mac.xcworkspace
 macOS/Demo/TICDemo_Mac/Pods
+macOS/Demo/TICDemo_Mac/Podfile.lock
 macOS/Demo/TICDemo/TICDemo.xcworkspace
 macOS/Demo/TICDemo/Pods
+macOS/Demo/TICDemo/Podfile.lock
