--- a/Android/Demo/app/build.gradle
+++ b/Android/Demo/app/build.gradle
@@ -51,9 +51,9 @@ dependencies {
     compile 'com.android.support:support-compat:26+'
 
     // 教育白板
-//    compile(name: 'TEduBoardSdk-release', ext: 'aar')
+    compile(name: 'TEduBoardSdk-release', ext: 'aar')
 //    compile project(':TEduBoardSdk')
-       compile ('com.tencent.teduboard:TEduBoardSdk:2.3.0.109')
+//       compile ('com.tencent.teduboard:TEduBoardSdk:2.3.0.109')
         //如果自已应用同时存在tbs库，请打开下面的注释，免重复
 //       {
 //           exclude group: 'com.tencent.smtt'
