--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,21 @@
 .DS_Store
 .vs
-Windows/Demo/Debug
-Windows/Demo/Release
-Windows/Demo/GPUCache
-Windows/Demo/Debug
-Windows/Demo/Release
+PaaS/Windows/Demo/Debug
+PaaS/Windows/Demo/Release
+PaaS/Windows/Demo/GPUCache
+PaaS/Windows/Demo/Debug
+PaaS/Windows/Demo/Release
 *.user
 *.aps
 Web/Demo/.idea
 /.idea
-macOS/Demo/TICDemo_Mac/TICDemo_Mac.xcworkspace
-macOS/Demo/TICDemo_Mac/Pods
-macOS/Demo/TICDemo_Mac/Podfile.lock
-iOS/Demo/TICDemo/TICDemo.xcworkspace
-iOS/Demo/TICDemo/Podfile.lock
-iOS/Demo/TICDemo/Pods
+PaaS/macOS/Demo/TICDemo_Mac/TICDemo_Mac.xcworkspace
+PaaS/macOS/Demo/TICDemo_Mac/Pods
+PaaS/macOS/Demo/TICDemo_Mac/Podfile.lock
+PaaS/iOS/Demo/TICDemo/TICDemo.xcworkspace
+PaaS/iOS/Demo/TICDemo/Podfile.lock
+PaaS/iOS/Demo/TICDemo/Pods
+PaaS/macOS/Demo/TICDemo_Mac/TICDemo_Mac.xcodeproj/xcuserdata
+PaaS/macOS/Demo/TICDemo_Mac/TICDemo_Mac.xcworkspace/xcuserdata
+PaaS/iOS/Demo/TICDemo/TICDemo.xcodeproj/xcuserdata
+PaaS/iOS/Demo/TICDemo/TICDemo.xcworkspace/xcuserdata
