--- a/PaaS/Windows/Demo/TICDemo.vcxproj
+++ b/PaaS/Windows/Demo/TICDemo.vcxproj
@@ -227,6 +227,8 @@ COPY /Y $(ProjectDir)..\SDK\TRTC\lib $(OutDir) </Command>
     <ClInclude Include="..\SDK\TIC\jsoncpp\json-forwards.h" />
     <ClInclude Include="..\SDK\TIC\jsoncpp\json.h" />
     <ClInclude Include="..\SDK\TIC\NTP.h" />
+    <ClInclude Include="..\SDK\TIC\TICLocalRecord.h" />
+    <ClInclude Include="..\SDK\TIC\TICLocalRecordImpl.h" />
     <ClInclude Include="..\SDK\TIC\TICManager.h" />
     <ClInclude Include="..\SDK\TIC\TICManagerImpl.h" />
     <ClInclude Include="..\SDK\TIC\TICRecorder.h" />
@@ -251,6 +253,9 @@ COPY /Y $(ProjectDir)..\SDK\TRTC\lib $(OutDir) </Command>
     <ClCompile Include="..\SDK\TIC\NTP.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
+    </ClCompile>
+    <ClCompile Include="..\SDK\TIC\TICLocalRecordImpl.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="..\SDK\TIC\TICManager.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
