--- a/PaaS/Windows/Demo/TICDemo.vcxproj
+++ b/PaaS/Windows/Demo/TICDemo.vcxproj
@@ -234,6 +234,7 @@ COPY /Y $(ProjectDir)..\SDK\TRTC\lib $(OutDir) </Command>
     <ClInclude Include="..\SDK\TIC\TICRecorder.h" />
     <ClInclude Include="BoardDlg.h" />
     <ClInclude Include="Config.h" />
+    <ClInclude Include="PushDlg.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -271,6 +272,7 @@ COPY /Y $(ProjectDir)..\SDK\TRTC\lib $(OutDir) </Command>
     </ClCompile>
     <ClCompile Include="BoardDlg.cpp" />
     <ClCompile Include="Config.cpp" />
+    <ClCompile Include="PushDlg.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
