--- a/PaaS/Windows/Demo/TICDemo.vcxproj.filters
+++ b/PaaS/Windows/Demo/TICDemo.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClInclude Include="..\SDK\TIC\TICLocalRecordImpl.h">
       <Filter>TIC</Filter>
     </ClInclude>
+    <ClInclude Include="PushDlg.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TICDemo.cpp">
@@ -112,6 +115,9 @@
     </ClCompile>
     <ClCompile Include="..\SDK\TIC\TICLocalRecordImpl.cpp">
       <Filter>TIC</Filter>
+    </ClCompile>
+    <ClCompile Include="PushDlg.cpp">
+      <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
