[录制]增加实例化

--- a/PaaS/Windows/Demo/TICDemo.vcxproj
+++ b/PaaS/Windows/Demo/TICDemo.vcxproj
@@ -255,6 +255,9 @@ COPY /Y $(ProjectDir)..\SDK\TRTC\lib $(OutDir) </Command>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="..\SDK\TIC\TICLocalRecord.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
+    </ClCompile>
     <ClCompile Include="..\SDK\TIC\TICLocalRecordImpl.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
