--- a/PaaS/Windows/Demo/TICDemo.vcxproj
+++ b/PaaS/Windows/Demo/TICDemo.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -29,7 +29,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
     <UseOfMfc>Static</UseOfMfc>
   </PropertyGroup>
@@ -227,8 +227,6 @@ COPY /Y $(ProjectDir)..\SDK\TRTC\lib $(OutDir) </Command>
     <ClInclude Include="..\SDK\TIC\jsoncpp\json-forwards.h" />
     <ClInclude Include="..\SDK\TIC\jsoncpp\json.h" />
     <ClInclude Include="..\SDK\TIC\NTP.h" />
-    <ClInclude Include="..\SDK\TIC\TICLocalRecord.h" />
-    <ClInclude Include="..\SDK\TIC\TICLocalRecordImpl.h" />
     <ClInclude Include="..\SDK\TIC\TICManager.h" />
     <ClInclude Include="..\SDK\TIC\TICManagerImpl.h" />
     <ClInclude Include="..\SDK\TIC\TICRecorder.h" />
@@ -254,12 +252,6 @@ COPY /Y $(ProjectDir)..\SDK\TRTC\lib $(OutDir) </Command>
     <ClCompile Include="..\SDK\TIC\NTP.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
-    </ClCompile>
-    <ClCompile Include="..\SDK\TIC\TICLocalRecord.cpp">
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
-    </ClCompile>
-    <ClCompile Include="..\SDK\TIC\TICLocalRecordImpl.cpp">
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="..\SDK\TIC\TICManager.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
