调整小程序和web Demo源码

--- a/PaaS/小程序/Demo/project.config.json
+++ b/PaaS/小程序/Demo/project.config.json
@@ -6,11 +6,21 @@
 		"es6": true,
 		"postcss": true,
 		"minified": true,
-		"newFeature": true
+		"newFeature": true,
+		"coverView": true,
+		"autoAudits": false,
+		"checkInvalidKey": true,
+		"checkSiteMap": true,
+		"uploadWithSourceMap": true,
+		"babelSetting": {
+			"ignore": [],
+			"disablePlugins": [],
+			"outputPath": ""
+		}
 	},
-	"appid": "",
-	"projectname": "TIC2.0",
-	"libVersion": "2.8.0",
+	"appid": "wx748277861c01d4be",
+	"projectname": "TEduBoard-Demo",
+	"libVersion": "2.9.4",
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
 	"condition": {
