--- a/PaaS/小程序/Demo/miniprogram/app.json
+++ b/PaaS/小程序/Demo/miniprogram/app.json
@@ -1,14 +1,12 @@
 {
   "pages": [
-    "pages/main/main",
     "pages/tic/index/index",
-    "pages/tic/classroom/room",
 	  "pages/tic/classroom_new/room"
   ],
   "window": {
     "pageOrientation": "auto",
     "navigationBarTextStyle": "black",
-    "navigationBarTitleText": "腾讯云行业解决方案",
+    "navigationBarTitleText": "TEduBoard-Demo",
     "navigationBarBackgroundColor": "#f8f8f8",
     "backgroundColor": "#f8f8f8",
     "renderingMode": "seperated"
