--story=856605587 【互动白板】【Demo】【Mac】增加缩略图示例 #finished --story=856605567 【互动白板】【Demo】【Mac】增加H5文件示例 #finished --story=856605541 【互动白板】【Demo】【Mac】增加视频播放示例 #finished

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,9 @@ PaaS/macOS/Demo/TICDemo_Mac/TICDemo_Mac.xcodeproj/xcuserdata
 PaaS/macOS/Demo/TICDemo_Mac/TICDemo_Mac.xcworkspace/xcuserdata
 PaaS/iOS/Demo/TICDemo/TICDemo.xcodeproj/xcuserdata
 PaaS/iOS/Demo/TICDemo/TICDemo.xcworkspace/xcuserdata
+PaaS/Android/Demo/.gradle
+PaaS/Android/Demo/.idea
+PaaS/Android/Demo/build
+Demo.iml
+PaaS/Android/Demo/gradle
+local.properties
