--- a/PaaS/macOS/Demo/TICDemo_Mac/Podfile
+++ b/PaaS/macOS/Demo/TICDemo_Mac/Podfile
@@ -5,4 +5,5 @@ target 'TICDemo_Mac' do
   pod 'TEduBoard_Mac', '2.3.7'
   pod 'TXIMSDK_Mac', '4.5.111'
   pod 'TXLiteAVSDK_TRTC_Mac', '6.7.7734'
+  pod 'SDWebImage'
 end
