--- a/PaaS/Android/Demo/app/build.gradle
+++ b/PaaS/Android/Demo/app/build.gradle
@@ -51,8 +51,8 @@ dependencies {
     compile 'com.android.support:support-compat:26+'
 
     // 教育白板
-    compile(name: 'TEduBoardSdk-release', ext: 'aar')
-//    compile ('com.tencent.teduboard:TEduBoardSdk:2.3.7.255')
+//    compile(name: 'TEduBoardSdk-release', ext: 'aar')
+    compile ('com.tencent.teduboard:TEduBoardSdk:2.4.0.286')
         //如果自已应用同时存在tbs库，请打开下面的注释，免重复
 //       {
 //           exclude group: 'com.tencent.smtt'
