--- a/PaaS/Windows/Demo/TICDemo.vcxproj
+++ b/PaaS/Windows/Demo/TICDemo.vcxproj
@@ -226,6 +226,8 @@ COPY /Y $(ProjectDir)..\SDK\TRTC\lib $(OutDir) </Command>
     <ClInclude Include="..\SDK\TIC\HttpClient.h" />
     <ClInclude Include="..\SDK\TIC\jsoncpp\json-forwards.h" />
     <ClInclude Include="..\SDK\TIC\jsoncpp\json.h" />
+    <ClInclude Include="..\SDK\TIC\localRecord\TICLocalRecord.h" />
+    <ClInclude Include="..\SDK\TIC\localRecord\TICLocalRecordImpl.h" />
     <ClInclude Include="..\SDK\TIC\NTP.h" />
     <ClInclude Include="..\SDK\TIC\TICManager.h" />
     <ClInclude Include="..\SDK\TIC\TICManagerImpl.h" />
@@ -248,6 +250,14 @@ COPY /Y $(ProjectDir)..\SDK\TRTC\lib $(OutDir) </Command>
     <ClCompile Include="..\SDK\TIC\jsoncpp\jsoncpp.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
+    </ClCompile>
+    <ClCompile Include="..\SDK\TIC\localRecord\TICLocalRecord.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
+    </ClCompile>
+    <ClCompile Include="..\SDK\TIC\localRecord\TICLocalRecordImpl.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="..\SDK\TIC\NTP.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
