--- a/PaaS/Android/Demo/app/build.gradle
+++ b/PaaS/Android/Demo/app/build.gradle
@@ -22,7 +22,7 @@ android {
         minSdkVersion 17
         targetSdkVersion 28
         versionCode 2
-        versionName "$System.env.MajorVersion-$System.env.MinorVersion-$System.env.BuildNo"
+        versionName "2.4.1"
         multiDexEnabled false
         ndk {
             abiFilters 'armeabi', 'armeabi-v7a'
