--- a/PaaS/Windows/Demo/TICDemo.vcxproj.filters
+++ b/PaaS/Windows/Demo/TICDemo.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClInclude Include="..\SDK\TIC\localRecord\TICLocalRecordImpl.h">
       <Filter>TIC\localrecord</Filter>
     </ClInclude>
+    <ClInclude Include="..\SDK\TIC\localrecord\md5.h">
+      <Filter>TIC\localrecord</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TICDemo.cpp">
@@ -126,6 +129,9 @@
       <Filter>TIC\localrecord</Filter>
     </ClCompile>
     <ClCompile Include="..\SDK\TIC\localRecord\TICLocalRecordImpl.cpp">
+      <Filter>TIC\localrecord</Filter>
+    </ClCompile>
+    <ClCompile Include="..\SDK\TIC\localrecord\md5.cpp">
       <Filter>TIC\localrecord</Filter>
     </ClCompile>
   </ItemGroup>
