--- a/PaaS/小程序/webrtc-room + canvas/miniprogram/app.json
+++ b/PaaS/小程序/webrtc-room + canvas/miniprogram/app.json
@@ -6,7 +6,7 @@
   "window": {
     "pageOrientation": "auto",
     "navigationBarTextStyle": "black",
-    "navigationBarTitleText": "腾讯云互动课堂",
+    "navigationBarTitleText": "腾讯云互动课堂-canvas",
     "navigationBarBackgroundColor": "#f8f8f8",
     "backgroundColor": "#f8f8f8",
     "renderingMode": "seperated"
